<resources>
    <string name="app_name">DrawSomething</string>
    <string name="title_activity_main2">Main Activity</string>
    <string name="woorden_raden_title"><u>Druk op een van de woorden om deze te raden</u></string>
    <string name="scorelijst_title"><u>Scorelijst</u></string>
    <string name="more_button">Open more menu</string>
    <string name="einde_ronde_title">Ronde voorbij!</string>
    <string name="einde_ronde_status">Over %1$d seconden begint een nieuwe ronde</string>
    <string name="einde_ronde_woord">Het woord was: %1$s</string>
    <string name="default_score">0</string>
    <string name="default_speler">speler</string>
    <string name="default_woord">…</string>
    <string name="pencil_icon">Huidige tekenaar</string>
    <string name="Woord1">…</string>
    <string name="Woord2">…</string>
    <string name="Woord3">…</string>
    <string name="Woord4">…</string>
    <string name="kopTekstWoordKeuze">kopTekstWoordKeuze</string>
    <string name="Kies_een_woord">Kies een woord om te tekenen</string>
    <string name="begin_ronde">Wacht op de tekenaar</string>
    <string name="woord_gekozen">Het woord is gekozen, u kunt nu gaan tekenen</string>
    <string name="title_activity_join_lobby">joinLobby</string>
    <string name="create_speler_title">Meedoen met een groep</string>
    <string name="naam_invoeren">Voer uw naam in</string>
    <string name="meedoen">Meedoen</string>
    <string name="groep_title">Groep aanmaken</string>
    <string name="delete">Groep verwijderen</string>
    <string name="begin_button">Start spel</string>
    <string name="spelerlijst"><u>Spelerlijst</u></string>
    <string name="einde_game">Game voorbij! De winnaar is %1$s</string>
    <string name="keuze_title">Hoe wilt u het woord gaan tekenen?</string>
    <string name="kinect_button">Met de Kinect</string>
    <string name="tablet_button">Op de tablet</string>
</resources>
